[package]
name = "diesel_derives"
version = "2.0.1"
license = "MIT OR Apache-2.0"
description = "You should not use this crate directly, it is internal to Diesel."
documentation = "https://diesel.rs/guides/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_derives"
autotests = false
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.65.0"

[dependencies]
syn = { version = "1.0.73", features = ["derive", "fold", "full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
proc-macro-error = "1.0.4"
diesel_table_macro_syntax = {version = "0.1",  path = "../diesel_table_macro_syntax"}

[dev-dependencies]
cfg-if = "1"
dotenvy = "0.15"

[dev-dependencies.diesel]
version = "~2.0.0"
path = "../diesel"

[lib]
proc-macro = true

[[test]]
name = "tests"

[features]
default = []
nightly = ["proc-macro2/nightly"]
postgres = []
sqlite = []
mysql = []
32-column-tables = []
64-column-tables = ["32-column-tables"]
128-column-tables = ["64-column-tables"]
without-deprecated = []
with-deprecated = []
r2d2 = []
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
