[package]
name = "diesel_derives"
version = "2.2.1"
license = "MIT OR Apache-2.0"
description = "You should not use this crate directly, it is internal to Diesel."
documentation = "https://diesel.rs/guides/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/"
autotests = false
include.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["derive", "fold", "full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
diesel_table_macro_syntax = {version = "0.2", path = "../diesel_table_macro_syntax"}
dsl_auto_type = { version = "0.1", path = "../dsl_auto_type" }

[dev-dependencies]
cfg-if = "1"
dotenvy = "0.15"

[dev-dependencies.diesel]
path = "../diesel"

[lib]
proc-macro = true

[[test]]
name = "tests"

[features]
default = []
nightly = ["proc-macro2/nightly"]
postgres = []
sqlite = []
mysql = []
32-column-tables = []
64-column-tables = ["32-column-tables"]
128-column-tables = ["64-column-tables"]
without-deprecated = []
with-deprecated = []
r2d2 = []
chrono = []
time = []

