[package]
name = "diesel_derives2"
version = "1.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://diesel.rs/guides/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_derives"

[dependencies]
syn = { version = "0.12.0", features = ["full"] }
quote = "0.4"
clippy = { optional = true, version = "=0.0.174" }

[lib]
proc-macro = true

[features]
default = []
lint = ["clippy"]

[badges]
travis-ci = { repository = "diesel-rs/diesel" }
appveyor = { repository = "diesel-rs/diesel" }
