[package]
name = "diesel_derives2"
version = "1.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://diesel.rs/guides/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_derives"

[dependencies]
syn = { version = "0.12.0", features = ["full"] }
quote = "0.4"
clippy = { optional = true, version = "=0.0.174" }
proc-macro2 = "0.2.0"

[dev-dependencies]
cfg-if = "0.1.0"
diesel = "1.1.0"
diesel_migrations = "1.1.0"
dotenv = "0.10.0"

[lib]
proc-macro = true

[[test]]
name = "tests"

[features]
default = []
lint = ["clippy"]
nightly = ["proc-macro2/nightly"]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

[badges]
travis-ci = { repository = "diesel-rs/diesel" }
appveyor = { repository = "diesel-rs/diesel" }
