[package]
name = "diesel-dynamic-schema"
version = "1.0.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"

[dependencies.diesel]
version = "2.0.0"
path = "../diesel/"
default-features = false

[[example]]
name = "querying_basic_schemas"
path = "examples/querying_basic_schemas.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "querying_multiple_types"
path = "examples/querying_multiple_types.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "columns_used_in_where_clause"
path = "examples/columns_used_in_where_clause.rs"
required-features = ["diesel/sqlite"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
required-features = ["diesel/sqlite"]
