[package]
name = "diesel-dynamic-schema"
version = "0.2.2"
license = "MIT OR Apache-2.0"
edition = "2018"
autotests = false
description = "A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL"
documentation = "https://docs.rs/diesel/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["orm", "database", "sql"]
categories = ["database"]
include.workspace = true
rust-version.workspace = true

[dependencies.diesel]
version = "~2.2.0"
path = "../diesel/"
default-features = false

[dev-dependencies]
dotenvy = "0.15"

[[example]]
name = "querying_basic_schemas"
path = "examples/querying_basic_schemas.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "querying_multiple_types"
path = "examples/querying_multiple_types.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "columns_used_in_where_clause"
path = "examples/columns_used_in_where_clause.rs"
required-features = ["diesel/sqlite"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
default = []
postgres = ["diesel/postgres_backend"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql_backend"]
