[package]
name = "diesel_infer_schema"
version = "0.10.1"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Provides functionality to infer the schema of a database"
documentation = "http://diesel.rs/guides/getting-started"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["orm", "database", "postgres", "postgresql", "sql"]

[dependencies]
diesel = { version = "0.10.0", default-features = false }
syn = "0.11.4"
quote = "0.3.1"

[dev-dependencies]
dotenv = "0.8.0"

[features]
default = []
postgres = ["diesel/postgres", "uses_information_schema"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql", "uses_information_schema"]
uses_information_schema = []
