[package]
name = "diesel_infer_schema"
version = "1.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Provides functionality to infer the schema of a database"
documentation = "https://docs.rs/diesel_infer_schema"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["diesel"]

[dependencies]
infer_schema_macros = { version = "1.1.0" }
clippy = { optional = true, version = "=0.0.174" }

[dev-dependencies]
diesel = "1.1.0"
dotenv = ">= 0.8, <0.11"
cfg-if = "0.1.0"

[features]
default = ["dotenv_macro"]
dotenv_macro = ["infer_schema_macros/dotenv"]
lint = ["clippy"]
postgres = ["infer_schema_macros/postgres"]
sqlite = ["infer_schema_macros/sqlite"]
mysql = ["infer_schema_macros/mysql"]
