[package]
name = "diesel_migrations"
version = "2.2.0"
license = "MIT OR Apache-2.0"
description = "Migration management for diesel"
documentation = "https://docs.rs/crate/diesel_migrations"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
edition = "2021"
include.workspace = true
rust-version.workspace = true
categories = ["database"]

[dependencies.migrations_internals]
version = "~2.2.0"
path = "migrations_internals"

[dependencies.migrations_macros]
version = "~2.2.0"
path = "migrations_macros"

[dev-dependencies]
dotenvy = "0.15"
cfg-if = "1.0.0"
tempfile = "3.2"

[dependencies.diesel]
version = "~2.2.0"
path = "../diesel"
default-features = false

[features]
default = []
sqlite = []
postgres = []
mysql = []
