[package]
name = "diesel_tests"
version = "0.1.0"
authors = ["Sage Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
autotests = false
autobenches = false
edition = "2018"

[dependencies]
assert_matches = "1.0.1"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
diesel = { path = "../diesel", default-features = false, features = ["quickcheck", "chrono", "uuid", "serde_json", "network-address", "numeric", "with-deprecated"] }
diesel_migrations = { path = "../diesel_migrations" }
dotenvy = "0.15"
quickcheck = "1.0.3"
uuid = { version = ">=0.7.0, <0.9.0" }
serde_json = { version=">=0.9, <2.0" }
ipnetwork = ">=0.12.2, <0.19.0"
bigdecimal = ">= 0.0.13, < 0.4.0"
rand = "0.8.4"
libsqlite3-sys = { version = "0.24", optional = true }

[features]
default = []
unstable = ["diesel/unstable"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
returning_clauses_for_sqlite_3_35 = ["diesel/returning_clauses_for_sqlite_3_35"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

