[package]
name = "diesel-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.diesel]
path = "../diesel"
features = ["sqlite", "returning_clauses_for_sqlite_3_35"]

[dependencies.diesel_migrations]
path = "../diesel_migrations"

[[bin]]
name = "fuzz_deserialize_sqlite"
path = "fuzz_targets/fuzz_deserialize_sqlite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_deserialize_postgres"
path = "fuzz_targets/fuzz_deserialize_postgres.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_serialize_sqlite"
path = "fuzz_targets/fuzz_serialize_sqlite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_migration_parser"
path = "fuzz_targets/fuzz_migration_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_query_builder"
path = "fuzz_targets/fuzz_query_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_deserialize"
path = "fuzz_targets/fuzz_json_deserialize.rs"
test = false
doc = false
bench = false
