[package]
name = "yaqb_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[dependencies]
yaqb = { path = "../yaqb" }

[dev-dependencies]
compiletest_rs = "*"
quickcheck = "*"

[[test]]
name = "compile_tests"
path = "tests/compile_tests.rs"
harness = true

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[[bench]]
name = "benchmarks"
path = "tests/bench.rs"
bench = true
