[package]
name = "yaqb_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT"

[dependencies]
yaqb = { path = "../yaqb" }
yaqb_codegen = { path = "../yaqb_codegen" }

[dev-dependencies]
compiletest_rs = "*"
quickcheck = "*"
dotenv = "0.4.0"

[features]
unstable = []

[[test]]
name = "compile_tests"
path = "tests/compile_tests.rs"
harness = true

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[[bench]]
name = "benchmarks"
path = "tests/bench.rs"
bench = true
