[package]
name = "infer_schema_internals"
version = "0.99.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Provides functionality to infer the schema of a database"
documentation = "http://diesel.rs/guides/getting-started"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["orm", "database", "postgres", "postgresql", "sql"]

[dependencies]
diesel = { version = "0.99.0", default-features = false }
clippy = { optional = true, version = "=0.0.174" }

[dev-dependencies]
dotenv = ">=0.8, <0.11"

[features]
default = []
postgres = ["diesel/postgres", "uses_information_schema"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql", "uses_information_schema"]
uses_information_schema = []
lint = ["clippy"]

[badges]
travis-ci = { repository = "diesel-rs/diesel" }
appveyor = { repository = "sgrif/diesel" }
