[package]
name = "infer_schema_macros"
version = "0.16.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "0.11.4", features = ["aster"] }
quote = "0.3.12"
dotenv = { version = ">=0.8, <0.11", optional = true, default-features = false }
diesel = { version = "0.16.0", default-features = false }
infer_schema_internals = { version = "0.16.0", default-features = false, path = "../infer_schema_internals" }
clippy = { optional = true, version = "=0.0.162" }

[dev-dependencies]
tempdir = "^0.3.4"

[lib]
proc-macro = true

[features]
default = ["dotenv"]
lint = ["clippy"]
postgres = ["diesel/postgres", "infer_schema_internals/postgres"]
sqlite = ["diesel/sqlite", "infer_schema_internals/sqlite"]
mysql = ["diesel/mysql", "infer_schema_internals/mysql"]
