[package]
name = "infer_schema_macros"
version = "1.0.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "This crate is internal to diesel_infer_schema and should not be used directly"

[dependencies]
syn = { version = "0.11.4", features = ["aster"] }
quote = "0.3.12"
dotenv = { version = ">=0.8, <0.11", optional = true, default-features = false }
infer_schema_internals = { version = "1.0.0", default-features = false }
clippy = { optional = true, version = "=0.0.174" }

[dev-dependencies]
tempdir = "^0.3.4"

[lib]
proc-macro = true

[features]
default = ["dotenv"]
lint = ["clippy"]
postgres = ["infer_schema_internals/postgres"]
sqlite = ["infer_schema_internals/sqlite"]
mysql = ["infer_schema_internals/mysql"]
