[package]
name = "migrations_internals"
version = "2.2.0"
license = "MIT OR Apache-2.0"
description = "Internal implementation of diesels migration mechanism"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
rust-version.workspace = true
include.workspace = true
edition = "2021"
keywords = ["diesel", "internal"]

[dependencies]
serde = {version = "1.0.0", features = ["derive"]}
toml = "0.8"
